Fixed profile image arrow not centered (or even). Fixed overlapping issue of the About-Me section.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,7 +3,7 @@
 
 .container {
 	// height: 100dvh;
-
+	padding-top: 126px;
 	header {
 		position: fixed;
 		top: 0;
@@ -83,8 +83,8 @@
 		&#profile-card {
 			height: calc(100dvh - 126px);
 			text-align: center;
-			position: relative;
-			top: 126px;
+			// position: relative;
+
 			.profile-image {
 				background-image: url("https://placehold.co/960x640");
 				background-color: rgba(120, 204, 109, 0.1);
@@ -114,7 +114,7 @@
 				&:after {
 					left: auto;
 					right: -25%;
-					-webkit-transform: rotate(-8deg);
+					-webkit-transform: rotate(-12deg);
 				}
 			}
 
